Replaced more instances of Collections with our framework